Bug 1212068 - Fix "warning C4018: '<': signed/unsigned mismatch" in mailnews/import and mailnews/mapi. r+a=jorgk CLOSED TREE DONTBUILD